--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <link rel="shortcut icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="manifest" href="/site.webmanifest">
     <title>GPBet</title>
+    <script src="//code.jivo.ru/widget/MgAeR2eRHq" async></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
